--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -386,7 +386,6 @@ p.demo_store,
 		.ast-site-header-cart {
 	        order: initial;
 			line-height: 3;
-			padding: 0 1em 1em 0;
 
 	    }
 
